[project]
name = "pybsolute"
version = "0.0.1"
authors = [
  { name="Luis David Trejos Rojas (ldtrdev)", email="luis.trejos@utp.edu.co" },
]
description = "Your absolute Python library for (almost) everything you need"
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ldtrdev/pybsolute"
Issues = "https://github.com/ldtrdev/pybsolute/issues"
